# generator-clean-project

./: .prettierignore  README.md  README_DEV.md  TODO.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
app/templates/python/: .env.example  Readme.md  __init__.py  index.py  pyproject.toml
app/templates/python/project/: __main__.py  index.py
app/templates/python/scripts/: check.py  format.py  sort_imports.py  start.py  test.py  type_check.py
app/templates/python/tests/: sample_test.py
app/templates/react/: .eslintignore  .eslintrc.cjs  README.md  tsconfig.json
app/templates/react-native/: index.ts
app/templates/react-native-expo/: .prettierignore  app.json  eslint.config.mjs  index.ts  metro.config.js  tsconfig.json
app/templates/react-native-expo/.expo/types/: router.d.ts
app/templates/react-native-expo/.storybook/: main.ts  storybook.requires.ts
app/templates/react-native-expo/app/: _layout.tsx  index.tsx
app/templates/react-native-expo/assets/: useFonts.ts
app/templates/react-next/: .eslintignore  .eslintrc.cjs  .prettierrc.cjs  tsconfig.json
app/templates/react-vite/: .eslintignore  .eslintrc.cjs  .prettierignore  tailwind.config.cjs  tsconfig.json  vite.config.ts
app/templates/react-vite/src/: index.ts
src/: constants.ts  enums.ts  index.ts  types.ts
